--- a/index.html
+++ b/index.html
@@ -126,40 +126,34 @@ printing and typesetting industry.</p>
             </div>
          </section>
     </main>
-    <footer class="my-12">
-        <!-- footer container -->
-        <div class="grid md:grid-cols-2">
-             <div class="items-center">
-            <!-- our conta -->
-                <!-- 1 -->
-            <div class="drop-shadoe-lg p-5 rounded-3xl space-y-4">
-                <div class="flex items-center">
-                <img src="icons/house.png" alt="">
-                <div class=""><h3 class="text-2xl text-[#363958] font-bold">Find the Perfect Fit</h3>
-                <p>Everybody is different, which is why we
-offer styles for every body.</p></div>
-             </div>
-         </div>
-            <div class="drop-shadoe-lg p-5 rounded-3xl space-y-4">
-                <div class="flex items-center">
-                <img src="icons/box.png" alt="">
-                <div class=""><h3 class="text-2xl text-[#363958] font-bold">Find the Perfect Fit</h3>
-                <p>Everybody is different, which is why we
-offer styles for every body.</p></div>
-             </div>
-         </div>
-            <div class="drop-shadoe-lg p-5 rounded-3xl space-y-4">
-                <div class="flex items-center">
-                <img src="icons/question.png" alt="">
-                <div class=""><h3 class="text-2xl text-[#363958] font-bold">Find the Perfect Fit</h3>
-                <p>Everybody is different, which is why we
-offer styles for every body.</p></div>
-             </div>
-         </div>
-             </div>
-             <div>
-            <img src="images/shopping.png" alt="">
-         </div>
+    <footer>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
+            <div class="space-y-6">
+                <div class="flex items-start gap-4 p-5 bg-white rounded-xl shadow">
+                    <img src="icons/house.png" class="w-12 h-12" alt="House">
+                    <div>
+                        <h4 class="font-bold text-lg">Find the Perfect Fit</h4>
+                        <p>Everybody is different, which is why we offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="flex items-start gap-4 p-5 bg-white rounded-xl shadow">
+                    <img src="icons/box.png" class="w-12 h-12" alt="Box">
+                    <div>
+                        <h4 class="font-bold text-lg">Free Exchanges</h4>
+                        <p>One of the many reasons you can shop with peace of mind.</p>
+                    </div>
+                </div>
+                <div class="flex items-start gap-4 p-5 bg-white rounded-xl shadow">
+                    <img src="icons/question.png" class="w-12 h-12" alt="Question">
+                    <div>
+                        <h4 class="font-bold text-lg">Contact Our Seller</h4>
+                        <p>They are here to help you with anything you need.</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="images/shopping.png" alt="Shopping" class="w-full">
+            </div>
         </div>
     </footer>
 </body>
